e2e-testing/kuttl/modify-valid-httproutes/00-base.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: modify-valid-httproutes
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: modify-valid-httproutes
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details
  namespace: modify-valid-httproutes
  labels:
    app: details
    version: shared
spec:
  replicas: 2
  selector:
    matchLabels:
      app: details
      version: shared
  template:
    metadata:
      labels:
        app: details
        version: shared
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: docker.io/istio/examples-bookinfo-details-v1:1.16.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
  namespace: modify-valid-httproutes
spec:
  host: details
  subsets:
  - name: shared
    labels:
      version: shared
...
