e2e-testing/kuttl/modify-valid-httproutes/00-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: modify-valid-httproutes
spec:
  hosts:
  - details
  - another-details
  http:
  - match:
    - gateways:
      - mesh
    route:
      - destination:
          host: details
          subset: shared
        weight: 80
      - destination:
          host: another-details
          subset: shared
        weight: 20
  - route:
    - destination:
        host: details
        subset: shared
